--- a/views/tabs/services.njk
+++ b/views/tabs/services.njk
@@ -64,78 +64,106 @@
   </div>
 
   <div class="table-services-container">
-    <table>
-      <thead>
-        <tr>
-          <th>Header 1</th>
-          <th>Header 2</th>
-          <th>Header 3</th>
-          <th>Header 4</th>
+    <table id="table-services">
+         <thead>
+         <!-- Headers for Col groups -->
+            <tr>
+               <th class="group-header group-service"  colspan="1"></th>
+               <th class="group-header group-git"      colspan="4">Git info</th>
+               <th class="group-header group-sonar"    colspan="4">Sonar</th>
+               <th class="group-header group-version"  colspan="2">Version info</th>
+               <th class="group-header group-ecs"      colspan="3">ECS</th>
+               <th class="group-header group-deptrack" colspan="7">Dependency Track</th>
+            </tr>
+         <!-- Col Headers -->
+            <tr>
+                  <th class="col-header header-service" id="col-head-service" data-type="string"> Service</th>
 
-          <th>Header 1</th>
-          <th>Header 2</th>
-          <th>Header 3</th>
-          <th>Header 4</th>
+                  <th class="col-header header-git" id="col-head-git-owner"    data-type="string"> Owner</th>
+                  <th class="col-header header-git" id="col-head-git-lang"     data-type="string"> Lang</th>
+                  <th class="col-header header-git" id="col-head-git-rel-last" data-type="string"> Last Release</th>
+                  <th class="col-header header-git" id="col-head-git-rel-date" data-type="date">   Date</th>
 
-          <th>Header 1</th>
-          <th>Header 2</th>
-          <th>Header 3</th>
-          <th>Header 4</th>
+                  <th class="col-header header-sonar-metric" id="col-head-sonar-coverage" data-type="string"> Coverage</th>
+                  <th class="col-header header-sonar-metric" id="col-head-sonar-bugs"     data-type="number"> Bugs</th>
+                  <th class="col-header header-sonar-metric" id="col-head-sonar-csmell"   data-type="number"> Code smell</th>
+                  <th class="col-header header-sonar-metric" id="col-head-sonar-vul"      data-type="number"> Vulnerabilities</th>
 
-          <th>Header 1</th>
-          <th>Header 2</th>
-          <th>Header 3</th>
-          <th>Header 4</th>
+                  <th class="col-header header-version" id="col-head-deptk-version"   data-type="string"> Version</th>
+                  <th class="col-header header-version" id="col-head-deptk-runtime"   data-type="string"> Runtime</th>
 
-          <th>Header 1</th>
-          <th>Header 2</th>
-          <th>Header 3</th>
-          <th>Header 4</th>
+                  <th class="col-header header-ecs" id="col-head-ecs-cidev"   data-type="string"> cidev</th>
+                  <th class="col-header header-ecs" id="col-head-ecs-stag"    data-type="string"> staging</th>
+                  <th class="col-header header-ecs" id="col-head-ecs-live"    data-type="string"> live</th>
 
-          <th>Header 1</th>
-          <th>Header 2</th>
-          <th>Header 3</th>
-          <th>Header 4</th>
-          <!-- Add more headers as needed -->
-        </tr>
-      </thead>
-      <tbody>
-        <!-- Sample data rows -->
-        {% for i in range(1, 101) %}
-          <tr>
-            <td>Row {{ i }} - Data 1</td>
-            <td>Row {{ i }} - Data 2</td>
-            <td>Row {{ i }} - Data 3</td>
-            <td>Row {{ i }} - Data 4</td>
+                  <th class="col-header header-deptrack"  id="col-head-deptk-date"data-type="date"  >Last BOM</th>
+                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mcrit" data-type="number">Critical</th>
+                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mhigh" data-type="number">High</th>
+                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mmed"  data-type="number">Medium</th>
+                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mlow"  data-type="number">Low</th>
+                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mvul"  data-type="number">Vulner.</th>
+                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mcomp" data-type="number">Compon.</th>
+            </tr>
+         </thead>
+         <tbody>
+         </tr>
+         {% for document in documents %}
+            <!-- Iterate over each version entry in versions array -->
+            {% for version in document.versions %}
+               <tr data-name="{{ document.name }}" data-version="{{ version.version }}">
+                     <!-- 1st Column (link) -->
+                     <td class="td-name"><a href="{{ document.gitInfo.repo }}">{{ document.name }}</a></td>
 
-            <td>Row {{ i }} - Data 1</td>
-            <td>Row {{ i }} - Data 2</td>
-            <td>Row {{ i }} - Data 3</td>
-            <td>Row {{ i }} - Data 4</td>
+                     <!-- 4 Columns (Git info)-->
+                     <td class="td_git-owner">     <a href="{{ document.gitInfo.repo }}/custom-properties">{{ document.gitInfo.owner }}</a></td>
+                     <td class="td_git-lang">      {{setLanguage(version.lang, document.gitInfo.lang, document.gitInfo.repo) }}</td>
+                     <td class="td-git-version">   <a href="{{ document.gitInfo.repo }}/releases">         {{ document.gitInfo.lastRelease.version }}</a></td>
+                     <td class="td-git-date"><span><a href="{{ document.gitInfo.repo }}/releases">         {{ document.gitInfo.lastRelease.date | date("YYYY-MM-DD") }}</a></span><br><span class="days-ago">({{ document.gitInfo.lastRelease.date | daysAgo }})</span></td>
 
-            <td>Row {{ i }} - Data 1</td>
-            <td>Row {{ i }} - Data 2</td>
-            <td>Row {{ i }} - Data 3</td>
-            <td>Row {{ i }} - Data 4</td>
+                     <!-- 4 Columns (sonar Metrics) -->
+                     <td class="td-met-coverage">       {{ sonarLink(document.sonarKey, document.sonarMetrics.coverage) }}</td>
+                     <td class="td-met-bugs">           {{ sonarLink(document.sonarKey, document.sonarMetrics.bugs) }}</td>
+                     <td class="td-met-smells">         {{ sonarLink(document.sonarKey, document.sonarMetrics.code_smells) }}</td>
+                     <td class="td-met-vulnerabilities">{{ sonarLink(document.sonarKey, document.sonarMetrics.vulnerabilities) }}</td>
 
-            <td>Row {{ i }} - Data 1</td>
-            <td>Row {{ i }} - Data 2</td>
-            <td>Row {{ i }} - Data 3</td>
-            <td>Row {{ i }} - Data 4</td>
+                     <!-- 2 Columns Version & Runtime-->
+                     <td class="td-version">{{ version.version }}</td>
+                     <td class="td-runtime">
+                        {% if version.runtime.length > 1 %}
+                           <ul class="td-runtime-info"> {% for info in version.runtime %} <li>{{ info }}</li> {% endfor %} </ul>
+                        {% else %}
+                           {{ version.runtime[0] }}
+                        {% endif %}
 
-            <td>Row {{ i }} - Data 1</td>
-            <td>Row {{ i }} - Data 2</td>
-            <td>Row {{ i }} - Data 3</td>
-            <td>Row {{ i }} - Data 4</td>
+                     <!-- 3 Columns ECS -->
+                     <td class="td-ecs"> {% for version in document.ecs.cidev %}   <li>{{ version }}</li> {% endfor %} </td>
+                     <td class="td-ecs"> {% for version in document.ecs.staging %} <li>{{ version }}</li> {% endfor %} </td>
+                     <td class="td-ecs"> {% for version in document.ecs.live %}    <li>{{ version }}</li> {% endfor %} </td>
 
-            <td>Row {{ i }} - Data 1</td>
-            <td>Row {{ i }} - Data 2</td>
-            <td>Row {{ i }} - Data 3</td>
-            <td>Row {{ i }} - Data 4</td>
-            <!-- Add more data cells as needed -->
-          </tr>
-        {% endfor %}
-      </tbody>
+                     <!-- 7 Columns Dep Track (Version specific) -->
+                     <td class="td-bom-import"><span>{{ depTrackLink(version.lastBomImport | date("YYYY-MM-DD"), version.uuid) }}</span><br><span class="days-ago">({{ version.lastBomImport | daysAgo }})</span></td>
+                     <td class="td-critical">
+                        {{DepTrackMetrics(version.metrics.critical, "critical", version.uuid)}}
+                     </td>
+                     <td class="td-deptrack-high">
+                        {{DepTrackMetrics(version.metrics.high, "high", version.uuid)}}
+                     </td>
+                     <td class="td-deptrack-medium">
+                        {{DepTrackMetrics(version.metrics.medium, "medium", version.uuid)}}
+                     </td>
+                     <td class="td-deptrack-low">
+                        {{DepTrackMetrics(version.metrics.low, "low", version.uuid)}}
+                     </td>
+                     <td class="td-deptrack-vulnerabilities">
+                        {{DepTrackMetrics(version.metrics.vulnerabilities, "vulnerabilities", version.uuid)}}
+                     </td>
+                     <td class="td-deptrack-components">
+                        {{DepTrackMetrics(version.metrics.components, "components", version.uuid, "components")}}
+                     </td>
+            </tr>
+            {% endfor %}
+         {% endfor %}
+         </tbody>
     </table>
   </div>
 </div>
